--- a/force-app/main/default/layouts/Property__c-Property Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Property__c-Property Layout.layout-meta.xml
@@ -35,6 +35,10 @@
                 <behavior>Edit</behavior>
                 <field>Tags__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Chan_Field__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
